<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity_actions">MainActivity</string>
    <string name="action_search">Search</string>
    <string name="button_rules">Rules</string>
    <string name="title_activity_display_rules">Rules</string>
    <string name="button_start">New Game</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="title_activity_game_settings">Settings</string>
    <string name="button_Quit">Quit</string>
    <string name="button_Scores">High Scores</string>
    <string name="button_startgame">Start Game</string>
    <string name="title_activity_game">Game</string>
    <string name="NewGame">New Game</string>
    <string name="Back">Back</string>
    <string name="edit_letter">Enter a letter</string>
    <string name="SendInput">Send</string>
    <string name="title_activity_display_high_scores">High Scores</string>
    <string name="goHighScores">See Your High Scores</string>

</resources>